--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/ParametrizacionContableProducto/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/ParametrizacionContableProducto/Index.cshtml
@@ -66,7 +66,7 @@
             </div>
         </div>
         <div class="box-body">
-            @Html.Action("GridViewPartial_movimiento_inventario_x_aprobar", new { IdSucursal = Model.IdSucursal, IdBodega = Model.IdBodega })
+            @Html.Action("GridViewPartial_ParametrizacionContableProducto", new { IdSucursal = Model.IdSucursal, IdBodega = Model.IdBodega })
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
@@ -82,6 +82,33 @@
             CargarBodega();
         });
     });
+
+    function AprobarMovimiento(SecuencialID)
+    {
+        var datos = {
+            SecuencialID: SecuencialID
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("AprobarMovimiento", "AprobacionMovimientoInventario", new { Area = "Inventario"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                if (data.length > 0) {
+                    alert(data);
+                    GridViewPartial_movimiento_inventario_x_aprobar.PerformCallback();
+                } else {
+                    alert("No se ha podido aprobar el movimiento de inventario");
+                }
+            },
+            error: function (error) {
+            }
+        });
+    }
 
     function CargarBodega() {
         $("#IdBodega").empty();
