--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/ParametrizacionContableProducto/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/ParametrizacionContableProducto/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Helps.cl_filtros_Info
 @{
-    ViewBag.Title = "Aprobación de ingresos y egresos de inventario";
+    ViewBag.Title = "Parametrización";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
