--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/ParametrizacionContableProducto/_GridViewPartial_ParametrizacionContableProducto.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/ParametrizacionContableProducto/_GridViewPartial_ParametrizacionContableProducto.cshtml
@@ -4,12 +4,12 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "GridViewPartial_ParametrizacionContableProducto";
-        settings.CallbackRouteValues = new { Controller = "ParametrizacionContableProducto", Action = "GridViewPartial_ParametrizacionContableProducto", Area = "Inventario" };
+        settings.CallbackRouteValues = new { Controller = "ParametrizacionContableProducto", Action = "GridViewPartial_ParametrizacionContableProducto", Area = "Inventario", IdSucursal = ViewBag.IdSucursal, IdBodega = ViewBag.IdBodega };
         settings.KeyFieldName = "Secuencia";
 
         settings.Width = Unit.Percentage(100);
         settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
-        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "ParametrizacionContableProducto", Action = "EditingUpdate_Fact", Area = "Facturacion" };
+        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "ParametrizacionContableProducto", Action = "EditingUpdate", Area = "Inventario" };
 
         //Configuración para que la grilla no muestre texto completo
         settings.SettingsBehavior.AllowEllipsisInText = true;
@@ -34,17 +34,35 @@
         settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
-
-        //Funcion para inicializar fila al presionar nuevo
-        settings.InitNewRow = (s, e) =>
+        
+        settings.Columns.Add(column =>
         {
-            e.NewValues["IdProducto"] = 0;
-            e.NewValues["IdCod_Impuesto"] = "IVA0";
-            e.NewValues["pd_cantidad"] = "1";
-            e.NewValues["pd_precio"] = "";
-            e.NewValues["pd_por_descuento_uni"] = "0";
-        };
-
+            column.FieldName = "Su_Descripcion";
+            column.Caption = "Sucursal";
+            column.Width = Unit.Percentage(15);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "bo_Descripcion";
+            column.Caption = "Bodega";
+            column.Width = Unit.Percentage(15);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "ca_Categoria";
+            column.Caption = "Categoria";
+            column.Width = Unit.Percentage(15);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "pr_codigo";
+            column.Caption = "Codigo";
+            column.Width = Unit.Percentage(10);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+        });
         settings.Columns.Add(column =>
         {
             column.FieldName = "pr_descripcion";
@@ -52,161 +70,30 @@
             column.Width = Unit.Percentage(15);
             column.EditFormSettings.Visible = DefaultBoolean.False;
         });
-
         settings.Columns.Add(column =>
         {
-            column.FieldName = "pd_cantidad";
-            column.Caption = "cantidad";
-            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
-            column.Width = Unit.Percentage(7);
-            column.EditFormSettings.Visible = DefaultBoolean.False;
-            column.EditorProperties().SpinEdit(q =>
-            {
-                q.MinValue = 0;
-                q.Width = Unit.Percentage(100);
-            });
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "pd_precio";
-            column.Caption = "Precio";
-            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
-            column.Width = Unit.Percentage(7);
-            column.EditorProperties().SpinEdit(q =>
-            {
-                q.MinValue = 0;
-                q.Width = Unit.Percentage(100);
-            });
+            column.FieldName = "pc_Cuenta";
+            column.Caption = "Cuenta";
+            column.Width = Unit.Percentage(20);
             column.EditFormSettings.Visible = DefaultBoolean.False;
         });
         settings.Columns.Add(column =>
         {
-            column.FieldName = "pd_por_descuento_uni";
-            column.Caption = "% Desc. uni.";
-            column.Width = Unit.Percentage(7);
-            column.EditorProperties().SpinEdit(q =>
-            {
-                q.MinValue = 0;
-                q.Width = Unit.Percentage(100);
-            });
-            column.EditFormSettings.Visible = DefaultBoolean.False;
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "IdCod_Impuesto";
-            column.Caption = "Impuesto";
-            column.Width = Unit.Percentage(10);
+            column.FieldName = "IdCtaCble_Costo";
+            column.Caption = "Cuenta";
+            column.Width = Unit.Percentage(20);
             column.Visible = false;
-            column.EditorProperties().ComboBox(p =>
-            {
-                p.Columns.Add("nom_impuesto", "Descripción").Width = Unit.Percentage(100);
-                p.TextField = "nom_impuesto";
-                p.ValueField = "IdCod_Impuesto";
-                p.ValueType = typeof(string);
-                p.DataSource = ViewBag.lst_impuesto;
-            });
-            column.EditFormSettings.Visible = DefaultBoolean.False;
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "pd_precio_final";
-            column.Caption = "Precio final";
-            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
-            column.Width = Unit.Percentage(7);
-            column.EditFormSettings.Visible = DefaultBoolean.False;
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "pd_subtotal";
-            column.Caption = "Subtotal";
-            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
-            column.Width = Unit.Percentage(8);
-            column.EditFormSettings.Visible = DefaultBoolean.False;
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "pd_iva";
-            column.Caption = "I.V.A.";
-            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
-            column.Width = Unit.Percentage(7);
-            column.EditFormSettings.Visible = DefaultBoolean.False;
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "pd_total";
-            column.Caption = "Total";
-            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
-            column.Width = Unit.Percentage(7);
-            column.EditFormSettings.Visible = DefaultBoolean.False;
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "IdCentroCosto";
-            column.Caption = "Centro de costo";
-            column.Width = Unit.Percentage(10);
-            column.Visible = false;
-            column.VisibleIndex = 7;
             column.EditFormSettings.Visible = DefaultBoolean.True;
             column.SetEditItemTemplateContent(c =>
             {
-                Html.RenderPartial("_CmbCentroCosto_Proforma", DataBinder.Eval(c.DataItem, "IdCentroCosto"));
+                Html.RenderPartial("_CmbCuenta", DataBinder.Eval(c.DataItem, "IdCtaCble_Costo"));
             });
         });
-
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "cc_Descripcion";
-            column.Caption = "Centro de costo";
-            column.Width = Unit.Percentage(10);
-            column.EditFormSettings.Visible = DefaultBoolean.False;
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "NumCotizacion";
-            column.Caption = "# Cotizacion";
-            column.Width = Unit.Percentage(7);
-            column.EditFormSettings.Visible = DefaultBoolean.True;
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "NumOPr";
-            column.Caption = "# Orden Pedido";
-            column.Width = Unit.Percentage(7);
-            column.EditFormSettings.Visible = DefaultBoolean.True;
-        });
-        settings.Columns.Add(column =>
-        {
-            column.Caption = "*";
-            column.FieldName = "Secuencia";
-            column.Width = Unit.Percentage(5);
-            column.EditFormSettings.Visible = DefaultBoolean.False;
-            column.UnboundType = DevExpress.Data.UnboundColumnType.String;
-            column.SetDataItemTemplateContent(c =>
-            {
-                ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-lock\" onclick=\"MostrarModalPrecios('" + c.KeyValue + "');\"></span>");
-            });
-        });
-
-        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "pd_subtotal").DisplayFormat = "{0:n2}";
-        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "pd_iva").DisplayFormat = "{0:n2}";
-        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "pd_total").DisplayFormat = "{0:n2}";
-        settings.Settings.ShowFooter = true;
-        settings.CellEditorInitialize = (sender, e) =>
-        {
-            if (e.Column.FieldName == "pd_por_descuento_uni" && SessionFixed.EsSuperAdmin != "True")
-            {
-                MVCxGridView g = sender as MVCxGridView;
-                e.Editor.ReadOnly = true;
-            }
-            if (e.Column.FieldName == "pd_precio" && SessionFixed.EsSuperAdmin != "True")
-            {
-                MVCxGridView g = sender as MVCxGridView;
-                e.Editor.ReadOnly = true;
-            }
-        };
-
-        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['IdCliente'] = IdCliente.GetValue(); e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); e.customArgs['NivelDescuento'] = $('#IdNivel').val();}";
-        settings.ClientSideEvents.EndCallback = "function(s,e){ if (s.IsEditing()) {var editor = IdCentroCosto;editor.Focus();}}";
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
+    if (ViewData["EditError"] != null)
+    {
+        grid.SetEditErrorText((string)ViewData["EditError"]);
+    }
 }
 @grid.Bind(Model).GetHtml()
