--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_GridViewPartial_factura_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_GridViewPartial_factura_det.cshtml
@@ -214,7 +214,7 @@
         };
 
         settings.ClientSideEvents.BeginCallback = "function(s,e){e.customArgs['IdCliente'] = IdCliente.GetValue(); e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); e.customArgs['NivelDescuento'] = $('#IdNivel').val();}";
-        settings.ClientSideEvents.EndCallback = "function(s,e){ CargarCuotas(); ValidarGrid(); SetCodigo(); if (s.IsEditing()) {var editor = IdProducto;editor.Focus();}}";
+        settings.ClientSideEvents.EndCallback = "function(s,e){ CargarCuotas(); ValidarGrid(); if (s.IsEditing()) {var editor = IdProducto;editor.Focus();}}";
         //if (s.IsEditing()) {var editor = s.GetEditor('IdProducto');editor.Focus();} //Para combos normal
         //if (s.IsEditing()) {var editor = IdProducto; editor.Focus();} //Para combo bajo demanda como producto
 
