--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Nuevo.cshtml
@@ -146,7 +146,7 @@
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-
+                SetCodigo();
             },
             error: function (error) {
             }
@@ -198,18 +198,6 @@
         </div>
 
     }
-
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-12">
-                <div class="form-group">
-                    <label for="codigo">Código</label>
-                    @Html.TextBoxFor(q => q.CodGuiaRemision, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.CodGuiaRemision, "", new { @class = "text-danger", @id = "CodGuiaRemision" })
-                </div>
-            </div>
-        </div>
-    </div>
 
         <div class="row">
             <div class="col-md-6">
@@ -513,6 +501,17 @@
                                 <label for="NumNota_Impresa"># Documento*</label>
                                 @Html.TextBoxFor(q => q.vt_NumFactura, new { @class = "form-control", @id = "vt_NumFactura" })
                                 @Html.ValidationMessageFor(q => q.vt_NumFactura, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <label for="codigo">Código</label>
+                                @Html.TextBoxFor(q => q.CodGuiaRemision, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(q => q.CodGuiaRemision, "", new { @class = "text-danger", @id = "CodGuiaRemision" })
                             </div>
                         </div>
                     </div>
