--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/_GridViewPartial_egr_inv_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/_GridViewPartial_egr_inv_det.cshtml
@@ -46,7 +46,7 @@
         {
             column.FieldName = "pr_descripcion";
             column.Caption = "Producto";
-            column.Width = Unit.Percentage(40);
+            column.Width = Unit.Percentage(30);
             column.EditFormSettings.Visible = DefaultBoolean.False;
         });
 
@@ -66,7 +66,7 @@
         {
             column.FieldName = "IdUnidadMedida_sinConversion";
             column.Caption = "Unidad de medida";
-            column.Width = Unit.Percentage(20);
+            column.Width = Unit.Percentage(10);
             column.EditFormSettings.Visible = DefaultBoolean.True;
             column.EditorProperties().ComboBox(p =>
             {
@@ -80,22 +80,31 @@
                 p.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
             });
         });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "dm_cantidad_sinConversion";
-            column.Caption = "cantidad";
-            column.Width = Unit.Percentage(20);
-
-        });
+        
 
         settings.Columns.Add(column =>
         {
             column.FieldName = "Desc_mov_inv";
             column.Caption = "Motivo";
-            column.Width = Unit.Percentage(40);
+            column.Width = Unit.Percentage(20);
             column.EditFormSettings.Visible = DefaultBoolean.False;
         });
 
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "cc_Descripcion";
+            column.Caption = "Centro de costo";
+            column.Width = Unit.Percentage(20);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+        });
+
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "dm_cantidad_sinConversion";
+            column.Caption = "cantidad";
+            column.Width = Unit.Percentage(10);
+
+        });
         settings.Columns.Add(column =>
         {
             column.FieldName = "IdMotivo_Inv_det";
@@ -122,17 +131,32 @@
                 Html.RenderPartial("_CmbCentroCosto_Inv_Eg", DataBinder.Eval(c.DataItem, "IdCentroCosto"));
             });
         });
-
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "cc_Descripcion";
-            column.Caption = "Centro de costo";
-            column.Width = Unit.Percentage(15);
-            column.EditFormSettings.Visible = DefaultBoolean.False;
-        });
-
         settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
-        settings.ClientSideEvents.EndCallback = "function(s,e){if (s.IsEditing()) {var editor = IdProducto;editor.Focus();}}";
+        settings.ClientSideEvents.EndCallback = "function(s,e){if (s.IsEditing()) {var editor = IdProducto;editor.Focus(); SetSucursalBodega();}}";
     });
 }
 @grid.Bind(Model).GetHtml()
+
+<script>
+    function SetSucursalBodega() {
+        var datos = {
+            IdSucursal: $("#IdSucursal").val(),
+            IdBodega: $("#IdBodega").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("SetSucursalBodega", "IngresoInventario", new { Area = "Inventario" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+              
+            },
+            error: function (error) {
+            }
+        });
+    }
+</script>
